# googletest-cmake-conan-blueprint

./: CMakeLists.txt  Dockerfile  README.md  main_test.cc
